load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "error",
    srcs = [
        "diagnostic.go",
        "errors.go",
    ],
    importpath = "github.com/nagarajRPoojari/picasso/irgen/error",
    visibility = ["//visibility:public"],
    deps = ["@com_github_fatih_color//:color"],
)
