load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "parser",
    srcs = [
        "expr.go",
        "lookup.go",
        "parser.go",
        "reserved.go",
        "stmt.go",
        "types.go",
        "utils.go",
    ],
    importpath = "github.com/nagarajRPoojari/picasso/irgen/parser",
    visibility = ["//visibility:public"],
    deps = [
        "//irgen/ast",
        "//irgen/error",
        "//irgen/lexer",
    ],
)
