load("@rules_cc//cc:cc_test.bzl", "cc_test")

package(default_visibility = ["//visibility:private"])

COMMON_COPTS = [
    "-std=c11",
    "-g",
    "-O0",
    "-fno-omit-frame-pointer",
] + select({
    "//:linux": [
        "-D_GNU_SOURCE",
        "-D_POSIX_C_SOURCE=200809L",
    ],
    "//:macos": [
        "-D_DARWIN_C_SOURCE",
    ],
})

COMMON_DEPS = [
    "//test/unity:unity",
    "//:runtime_lib_test",
    "//:system_libs",
]

COMMON_LINKOPTS = [
    "-rdynamic",
]

cc_test(
    name = "alloc_stress_test",
    srcs = ["alloc_stress_test.c"],
    copts = COMMON_COPTS,
    linkopts = COMMON_LINKOPTS,
    deps = COMMON_DEPS,
    timeout = "long",
    tags = ["stress", "manual"],
)

cc_test(
    name = "scheduler_many_short_tasks_test",
    srcs = ["scheduler/many_short_tasks_test.c"],
    copts = COMMON_COPTS,
    linkopts = COMMON_LINKOPTS,
    deps = COMMON_DEPS,
    timeout = "long",
    tags = ["stress"],
)

cc_test(
    name = "scheduler_nested_spawning_test",
    srcs = ["scheduler/nested_spawning_test.c"],
    copts = COMMON_COPTS,
    linkopts = COMMON_LINKOPTS,
    deps = COMMON_DEPS,
    timeout = "long",
    tags = ["stress"],
)

cc_test(
    name = "scheduler_compute_heavy_test",
    srcs = ["scheduler/compute_heavy_test.c"],
    copts = COMMON_COPTS,
    linkopts = COMMON_LINKOPTS,
    deps = COMMON_DEPS,
    timeout = "long",
    tags = ["stress"],
)

cc_test(
    name = "scheduler_task_yielding_test",
    srcs = ["scheduler/task_yielding_test.c"],
    copts = COMMON_COPTS,
    linkopts = COMMON_LINKOPTS,
    deps = COMMON_DEPS,
    timeout = "long",
    tags = ["stress"],
)

cc_test(
    name = "scheduler_mixed_workload_test",
    srcs = ["scheduler/mixed_workload_test.c"],
    copts = COMMON_COPTS,
    linkopts = COMMON_LINKOPTS,
    deps = COMMON_DEPS,
    timeout = "long",
    tags = ["stress"],
)

cc_test(
    name = "scheduler_rapid_cycles_test",
    srcs = ["scheduler/rapid_cycles_test.c"],
    copts = COMMON_COPTS,
    linkopts = COMMON_LINKOPTS,
    deps = COMMON_DEPS,
    timeout = "long",
    tags = ["stress"],
)

cc_test(
    name = "sync_rwmutex_multiple_writer",
    srcs = ["sync/rwmutex/multiple_writer_test.c"],
    copts = COMMON_COPTS,
    linkopts = COMMON_LINKOPTS,
    deps = COMMON_DEPS,
    timeout = "long",
    tags = ["stress"],
)

cc_test(
    name = "sync_rwmutex_long_holders",
    srcs = ["sync/rwmutex/long_holders_test.c"],
    copts = COMMON_COPTS,
    linkopts = COMMON_LINKOPTS,
    deps = COMMON_DEPS,
    timeout = "long",
    tags = ["stress"],
)

cc_test(
    name = "sync_rwmutex_randomized_reader_writer",
    srcs = ["sync/rwmutex/randomized_reader_writer_test.c"],
    copts = COMMON_COPTS,
    linkopts = COMMON_LINKOPTS,
    deps = COMMON_DEPS,
    timeout = "long",
    tags = ["stress"],
)

cc_test(
    name = "sync_mutex_long_holders",
    srcs = ["sync/mutex/long_holders_test.c"],
    copts = COMMON_COPTS,
    linkopts = COMMON_LINKOPTS,
    deps = COMMON_DEPS,
    timeout = "long",
    tags = ["stress"],
)

cc_test(
    name = "sync_waitgroup_multiple_waiters",
    srcs = ["sync/waitgroup/multiple_waiters.c"],
    copts = COMMON_COPTS,
    linkopts = COMMON_LINKOPTS,
    deps = COMMON_DEPS,
    timeout = "long",
    tags = ["stress"],
)

cc_test(
    name = "netio_concurrent_connections",
    srcs = ["netio/concurrent_connections_test.c"],
    copts = COMMON_COPTS,
    linkopts = COMMON_LINKOPTS,
    deps = COMMON_DEPS,
    timeout = "long",
    tags = ["stress", "netio"],
)

cc_test(
    name = "netio_rapid_cycles",
    srcs = ["netio/rapid_cycles_test.c"],
    copts = COMMON_COPTS,
    linkopts = COMMON_LINKOPTS,
    deps = COMMON_DEPS,
    timeout = "long",
    tags = ["stress", "netio"],
)

cc_test(
    name = "netio_large_transfer",
    srcs = ["netio/large_transfer_test.c"],
    copts = COMMON_COPTS,
    linkopts = COMMON_LINKOPTS,
    deps = COMMON_DEPS,
    timeout = "long",
    tags = ["stress", "netio"],
)

cc_test(
    name = "netio_mixed_operations",
    srcs = ["netio/mixed_operations_test.c"],
    copts = COMMON_COPTS,
    linkopts = COMMON_LINKOPTS,
    deps = COMMON_DEPS,
    timeout = "long",
    tags = ["stress", "netio"],
)

test_suite(
    name = "all",
    tests = [
        ":alloc_stress_test",
        ":scheduler_many_short_tasks_test",
        ":scheduler_nested_spawning_test",
        ":scheduler_compute_heavy_test",
        ":scheduler_task_yielding_test",
        ":scheduler_mixed_workload_test",
        ":scheduler_rapid_cycles_test",
        ":sync_rwmutex_multiple_writer",
        ":sync_rwmutex_long_holders",
        ":sync_rwmutex_randomized_reader_writer",
        ":sync_waitgroup_multiple_waiters",
        ":netio_concurrent_connections",
        ":netio_rapid_cycles",
        ":netio_large_transfer",
        ":netio_mixed_operations",
    ],
    visibility = ["//visibility:public"],
)