package(default_visibility = ["//visibility:public"])

cc_library(
    name = "unity",
    srcs = ["unity.c"],
    hdrs = [
        "unity.h",
        "unity_internals.h",
    ],
    include_prefix = "unity",  # this makes #include "unity/unity.h" work
    strip_include_prefix = ".", # strip test/unity from path
    visibility = ["//visibility:public"],
)
