load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "c",
    srcs = [
        "c.go",
        "constants.go",
        "funcs.go",
        "types.go",
    ],
    importpath = "github.com/nagarajRPoojari/niyama/irgen/codegen/c",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_llir_llvm//ir",
        "@com_github_llir_llvm//ir/enum",
        "@com_github_llir_llvm//ir/types",
    ],
)
