load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "c",
    srcs = [
        "c.go",
        "funcs.go",
        "types.go",
    ],
    importpath = "github.com/nagarajRPoojari/picasso/irgen/codegen/c",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_llir_llvm//ir",
        "@com_github_llir_llvm//ir/types",
    ],
)
