load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "libs",
    srcs = ["lib.go"],
    importpath = "github.com/nagarajRPoojari/picasso/irgen/codegen/libs",
    visibility = ["//visibility:public"],
    deps = [
        "//irgen/codegen/libs/array",
        "//irgen/codegen/libs/func",
        "//irgen/codegen/libs/io",
        "//irgen/codegen/libs/strings",
        "//irgen/codegen/libs/type",
    ],
)
