load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "type",
    srcs = [
        "array.go",
        "bound.go",
        "class.go",
        "interface.go",
        "metaclass.go",
        "metainterface.go",
        "null.go",
        "string.go",
        "type.go",
        "types.go",
        "var.go",
    ],
    importpath = "github.com/nagarajRPoojari/niyama/irgen/codegen/type",
    visibility = ["//visibility:public"],
    deps = [
        "//irgen/ast",
        "//irgen/codegen/c",
        "//irgen/codegen/error",
        "//irgen/codegen/handlers/constants",
        "//irgen/codegen/handlers/utils",
        "//irgen/codegen/libs/private/runtime",
        "//irgen/codegen/type/block",
        "//irgen/codegen/type/primitives/boolean",
        "//irgen/codegen/type/primitives/floats",
        "//irgen/codegen/type/primitives/ints",
        "//irgen/error",
        "@com_github_llir_llvm//ir",
        "@com_github_llir_llvm//ir/constant",
        "@com_github_llir_llvm//ir/enum",
        "@com_github_llir_llvm//ir/types",
        "@com_github_llir_llvm//ir/value",
    ],
)
