load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "block",
    srcs = [
        "base.go",
        "conditional.go",
        "defineblock.go",
        "loop.go",
    ],
    importpath = "github.com/nagarajRPoojari/niyama/irgen/codegen/handlers/block",
    visibility = ["//visibility:public"],
    deps = [
        "//irgen/ast",
        "//irgen/codegen/error",
        "//irgen/codegen/handlers/expression",
        "//irgen/codegen/handlers/state",
        "//irgen/codegen/handlers/statement",
        "//irgen/codegen/type",
        "//irgen/codegen/type/block",
        "@com_github_llir_llvm//ir",
        "@com_github_llir_llvm//ir/constant",
        "@com_github_llir_llvm//ir/enum",
        "@com_github_llir_llvm//ir/types",
    ],
)
