load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "expression",
    srcs = [
        "base.go",
        "callfunc.go",
        "indexing.go",
        "member.go",
        "new.go",
        "ops.go",
        "string.go",
        "symbol.go",
    ],
    importpath = "github.com/nagarajRPoojari/niyama/irgen/codegen/handlers/expression",
    visibility = ["//visibility:public"],
    deps = [
        "//irgen/ast",
        "//irgen/codegen/c",
        "//irgen/codegen/contract",
        "//irgen/codegen/error",
        "//irgen/codegen/handlers/constants",
        "//irgen/codegen/handlers/state",
        "//irgen/codegen/handlers/utils",
        "//irgen/codegen/libs/libutils",
        "//irgen/codegen/type",
        "//irgen/codegen/type/block",
        "//irgen/codegen/type/primitives/boolean",
        "//irgen/codegen/type/primitives/floats",
        "//irgen/codegen/type/primitives/ints",
        "//irgen/lexer",
        "@com_github_llir_llvm//ir/constant",
        "@com_github_llir_llvm//ir/enum",
        "@com_github_llir_llvm//ir/types",
        "@com_github_llir_llvm//ir/value",
    ],
)
