load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "func",
    srcs = [
        "base.go",
        "declarefunc.go",
        "definefunc.go",
    ],
    importpath = "github.com/nagarajRPoojari/niyama/irgen/codegen/handlers/func",
    visibility = ["//visibility:public"],
    deps = [
        "//irgen/ast",
        "//irgen/codegen/c",
        "//irgen/codegen/contract",
        "//irgen/codegen/error",
        "//irgen/codegen/handlers/block",
        "//irgen/codegen/handlers/constants",
        "//irgen/codegen/handlers/identifier",
        "//irgen/codegen/handlers/state",
        "//irgen/codegen/type",
        "//irgen/codegen/type/block",
        "@com_github_llir_llvm//ir",
        "@com_github_llir_llvm//ir/constant",
        "@com_github_llir_llvm//ir/types",
    ],
)
